added a lot more stuff

--- a/.env
+++ b/.env
@@ -1,1 +1,11 @@
+# Descope Config
 REACT_APP_DESCOPE_PROJECT_ID=P2OcCZGirnYg8GZcZnspTbcUVBSW
+
+# Firebase Config
+REACT_APP_FIREBASE_API_KEY=AIzaSyA-pNRVxb7mYTYDiA_L9KdTsJuRBNZbFT8
+REACT_APP_FIREBASE_AUTH_DOMAIN=test-62789.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=test-62789
+REACT_APP_FIREBASE_STORAGE_BUCKET=test-62789.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=1062404424657
+REACT_APP_FIREBASE_APP_ID=1:1062404424657:web:dc56608b31ae2aa1ac16f0
+REACT_APP_FIREBASE_MEASUREMENT_ID=measurementId
